force-app/main/default/objects/SousVente__c/SousVente__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les Sous Vente de la pharmacie</description>
    <label>Sous Vente</label>
    <nameField>
        <displayFormat>SousVente-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sous Ventes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>