force-app/main/default/objects/SousVente__c/fields/ModePaiement__c.field-meta.xml
<CustomField>
    <fullName>ModePaiement__c</fullName>
    <description>Champs représentant le Mode de paiement</description>
    <label>Mode Paiement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cash</fullName>
            </value>
            <value>
                <fullName>mobile money</fullName>
            </value>
            <value>
                <fullName>Carte bancaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>