force-app/main/default/objects/SousVente__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <description>Champs représentant le montant sous Vente</description>
    <formula>$Organization.Latitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Currency</type>
</CustomField>