force-app/main/default/objects/SousVente__c/fields/QuantiteVendu__c.field-meta.xml
<CustomField>
    <fullName>QuantiteVendu__c</fullName>
    <description>Champs représentant le quantité acheté de médicament</description>
    <label>Quantité vendu</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>