force-app/main/default/objects/SousVente__c/fields/TypeSousVente__c.field-meta.xml
<CustomField>
    <fullName>TypeSousVente__c</fullName>
    <description>Champs représentant le type de sous vente</description>
    <label>Type Sous Vente</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vente Standard</fullName>
            </value>
            <value>
                <fullName>vente avec bon-</fullName>
            </value>
            <value>
                <fullName>vent avec assurance/couverture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>