force-app/main/default/objects/SousVente__c/listViews/SousVentes.listView-meta.xml
<ListView>
    <fullName>SousVentes</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>QuantiteVendu__c</columns>
    <columns>ModePaiement__c</columns>
    <columns>TypeSousVente__c</columns>
    <filterScope>Mine</filterScope>
    <label>Sous Ventes</label>
</ListView>