force-app/main/default/objects/SousVente__c/listViews/SousVentesAssuranceCouverture.listView-meta.xml
<ListView>
    <fullName>SousVentesAssuranceCouverture</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>QuantiteVendu__c</columns>
    <columns>ModePaiement__c</columns>
    <columns>TypeSousVente__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TypeSousVente__c</field>
        <operation>equals</operation>
        <value>vent avec assurance/couverture</value>
    </filters>
    <label>Sous Ventes Assurance/Couverture</label>
</ListView>