force-app/main/default/objects/SousVente__c/listViews/SousVentesBon.listView-meta.xml
<ListView>
    <fullName>SousVentesBon</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>QuantiteVendu__c</columns>
    <columns>ModePaiement__c</columns>
    <columns>TypeSousVente__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TypeSousVente__c</field>
        <operation>equals</operation>
        <value>vente avec bon-</value>
    </filters>
    <label>Sous Ventes Bon</label>
</ListView>