force-app/main/default/objects/SousVente__c/listViews/SousVentesStandard.listView-meta.xml
<ListView>
    <fullName>SousVentesStandard</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>QuantiteVendu__c</columns>
    <columns>ModePaiement__c</columns>
    <columns>TypeSousVente__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TypeSousVente__c</field>
        <operation>equals</operation>
        <value>vente Standard</value>
    </filters>
    <label>Sous Ventes Standard</label>
</ListView>