force-app/main/default/objects/SousVente__c/listViews/VueRecemment.listView-meta.xml
<ListView>
    <fullName>VueRecemment</fullName>
    <columns>NAME</columns>
    <columns>Montant__c</columns>
    <columns>QuantiteVendu__c</columns>
    <columns>ModePaiement__c</columns>
    <columns>TypeSousVente__c</columns>
    <filterScope>Mine</filterScope>
    <label>Vue récemment</label>
</ListView>